--- a/Advanced-3/index.html
+++ b/Advanced-3/index.html
@@ -7,8 +7,13 @@
     <title>Document</title>
 </head>
 <body>
-    
-    
+    <!-- vytvořeni hledacího pole s tlačítkem -->
+    <div class="search">
+        <input type="text" class="inputSearch" placeholder="Co hledáte?">
+        <button class="btn">
+            <img src="image/magnifying glass.png" alt="" class="search-icon">
+        </button>
+    </div>
 
 </body>
 </html>
