prídaní Advanced-4 a Advanced-5 a oprava komentářu

--- a/Advanced-2/index.html
+++ b/Advanced-2/index.html
@@ -7,9 +7,8 @@
     <title>Document</title>
 </head>
 <body>
-    <!-- drží nám všechny slidy -->
+    <!-- slides -->
     <div class="container">
-        <!-- jednotlivé obrázky z textem -->
         <div class="slide img1 active">
             <h2>text</h2>
         </div>
@@ -31,7 +30,5 @@
         </div>
         
     </div>
-    
-
 </body>
 </html>
