--- a/Advanced-4/index.html
+++ b/Advanced-4/index.html
@@ -7,8 +7,42 @@
     <title>Document</title>
 </head>
 <body>
-    
-    
-
+    <div class="container-slider">
+        <!-- left part with colors and text -->
+        <div class="slide-left">
+            <div class="color-1-slide">
+                <h2>title</h2>
+                <p>lorem</p>
+            </div>
+            <div class="color-2-slide">
+                <h2>title</h2>
+                <p>lorem</p>
+            </div>
+            <div class="color-3-slide">
+                <h2>title</h2>
+                <p>lorem</p>
+            </div>
+            <div class="color-4-slide">
+                <h2>title</h2>
+                <p>lorem</p>
+            </div>
+        </div>
+        <!-- right part with pictures -->
+        <div class="slide-right">
+            <div class="image-1"></div>
+            <div class="image-2"></div>
+            <div class="image-3"></div>
+            <div class="image-4"></div>
+        </div>
+        <!-- arrow icons -->
+        <div class=" arrow-btns">
+            <div class="arrow arrow-down">
+                <img src="image/down-arrow.png" alt="">
+            </div>
+            <div class="arrow arrow-up">
+                <img src="image/down-arrow.png" alt="">
+            </div>
+        </div>
+    </div>
 </body>
 </html>
