dodělání prgramu a ostranění obrázku

--- a/Advanced-5/index.html
+++ b/Advanced-5/index.html
@@ -7,8 +7,20 @@
     <title>Document</title>
 </head>
 <body>
-    
-    
-
+    <!-- user search -->
+    <div class="filter-container">
+        <!-- search field -->
+        <div class="header">
+            <h2>Filtr uživatelů</h2>
+            <p>Hledat podle jména / lokality</p>
+            <input type="text" class="input-filter" placeholder="Vyhledat">
+        </div>
+        <!-- list of users -->
+        <ul class="user-list">
+            <li>
+                načítaní...
+            </li>
+        </ul>
+    </div>
 </body>
 </html>
